# metapyrodigal

./: .gitignore  pyproject.toml
src/: prodigal.py
